Using Java 9/10/11 features, removing unnecessary dependencies